--- a/api.csproj
+++ b/api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -11,6 +11,8 @@
     <ItemGroup>
       <PackageReference Include="HttpClientFactory" Version="1.0.3" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+      <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
+      <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
     </ItemGroup>
 
 
